--- a/index.html
+++ b/index.html
@@ -20,3 +20,26 @@
     </footer>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>간단한 페이지</title>
+</head>
+<body>
+    <header>
+        <h1>환영합니다!</h1>
+    </header>
+
+    <main>
+        <p>이것은 간단한 HTML 예시입니다. 웹 페이지를 만드는 법을 배우고 있습니다.</p>
+        <p>더 많은 정보는 <a href="https://www.example.com" target="_blank">여기</a>에서 확인하세요.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 나의 웹사이트</p>
+    </footer>
+</body>
+</html>
